# pi-range

./: LICENSE  README.md
client/: Cargo.toml  deploy.sh  rustfmt.toml
client/.cargo/: config
client/src/: args.rs  main.rs  sensor.rs  shutdown.rs  trigger.rs
server/: Cargo.toml
server/src/: args.rs  main.rs
