[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
tokio = { version = "1.9.0", features = ["full"] }
tungstenite = "0.14.0"
tokio-tungstenite = "0.15.0"
futures-util = "0.3.16"
futures = "0.3.16"
url = "2.2.2"
clap = "3.0.0-beta.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
