[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3.16"
futures-util = "0.3.16"
itertools = "0.10.1"
enigo = "0.0.14"
clap = "3.0.0-beta.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
